--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,144 @@
   publisher={Oxford University Press}
 }
 
+@ARTICLE{2013PASP..125..306F,
+       author = {{Foreman-Mackey}, Daniel and {Hogg}, David W. and {Lang}, Dustin and {Goodman}, Jonathan},
+        title = "{emcee: The MCMC Hammer}",
+      journal = {\pasp},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Computational Physics, Statistics - Computation},
+         year = 2013,
+        month = mar,
+       volume = {125},
+       number = {925},
+        pages = {306},
+          doi = {10.1086/670067},
+archivePrefix = {arXiv},
+       eprint = {1202.3665},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013PASP..125..306F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2016A&A...594A.116H,
+       author = {{HI4PI Collaboration} and {Ben Bekhti}, N. and {Fl{\"o}er}, L. and {Keller}, R. and {Kerp}, J. and {Lenz}, D. and {Winkel}, B. and {Bailin}, J. and {Calabretta}, M.~R. and {Dedes}, L. and {Ford}, H.~A. and {Gibson}, B.~K. and {Haud}, U. and {Janowiecki}, S. and {Kalberla}, P.~M.~W. and {Lockman}, F.~J. and {McClure-Griffiths}, N.~M. and {Murphy}, T. and {Nakanishi}, H. and {Pisano}, D.~J. and {Staveley-Smith}, L.},
+        title = "{HI4PI: A full-sky H I survey based on EBHIS and GASS}",
+      journal = {\aap},
+     keywords = {surveys, ISM: atoms, techniques: spectroscopic, Astrophysics - Astrophysics of Galaxies},
+         year = 2016,
+        month = oct,
+       volume = {594},
+          eid = {A116},
+        pages = {A116},
+          doi = {10.1051/0004-6361/201629178},
+archivePrefix = {arXiv},
+       eprint = {1610.06175},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...594A.116H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{chapman2022MNRAS.516..617C,
+       author = {{Chapman}, Michael J. and {Mohammad}, Faizan G. and {Zhai}, Zhongxu and {Percival}, Will J. and {Tinker}, Jeremy L. and {Bautista}, Julian E. and {Brownstein}, Joel R. and {Burtin}, Etienne and {Dawson}, Kyle S. and {Gil-Mar{\'\i}n}, H{\'e}ctor and {de la Macorra}, Axel and {Ross}, Ashley J. and {Rossi}, Graziano and {Schneider}, Donald P. and {Zhao}, Gong-Bo},
+        title = "{The completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: measurement of the growth rate of structure from the small-scale clustering of the luminous red galaxy sample}",
+      journal = {\mnras},
+     keywords = {galaxies: distances and redshifts, cosmological parameters, cosmology: observations, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2022,
+        month = oct,
+       volume = {516},
+       number = {1},
+        pages = {617-635},
+          doi = {10.1093/mnras/stac1923},
+archivePrefix = {arXiv},
+       eprint = {2106.14961},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.516..617C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{meisner2018RNAAS...2....1M,
+       author = {{Meisner}, A.~M. and {Lang}, D. and {Schlegel}, D.~J.},
+        title = "{Another unWISE Update: The Deepest Ever Full-sky Maps at 3-5{\,}{\ensuremath{\mu}}m}",
+      journal = {Research Notes of the American Astronomical Society},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2018,
+        month = jan,
+       volume = {2},
+       number = {1},
+          eid = {1},
+        pages = {1},
+          doi = {10.3847/2515-5172/aaa4bc},
+archivePrefix = {arXiv},
+       eprint = {1801.03566},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018RNAAS...2....1M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{gilmarin2020MNRAS.498.2492G,
+       author = {{Gil-Mar{\'\i}n}, H{\'e}ctor and {Bautista}, Juli{\'a}n E. and {Paviot}, Romain and {Vargas-Maga{\~n}a}, Mariana and {de la Torre}, Sylvain and {Fromenteau}, Sebastien and {Alam}, Shadab and {{\'A}vila}, Santiago and {Burtin}, Etienne and {Chuang}, Chia-Hsun and {Dawson}, Kyle S. and {Hou}, Jiamin and {de Mattia}, Arnaud and {Mohammad}, Faizan G. and {M{\"u}ller}, Eva-Maria and {Nadathur}, Seshadri and {Neveux}, Richard and {Percival}, Will J. and {Raichoor}, Anand and {Rezaie}, Mehdi and {Ross}, Ashley J. and {Rossi}, Graziano and {Ruhlmann-Kleider}, Vanina and {Smith}, Alex and {Tamone}, Am{\'e}lie and {Tinker}, Jeremy L. and {Tojeiro}, Rita and {Wang}, Yuting and {Zhao}, Gong-Bo and {Zhao}, Cheng and {Brinkmann}, Jonathan and {Brownstein}, Joel R. and {Choi}, Peter D. and {Escoffier}, Stephanie and {de la Macorra}, Axel and {Moon}, Jeongin and {Newman}, Jeffrey A. and {Schneider}, Donald P. and {Seo}, Hee-Jong and {Vivek}, Mariappan},
+        title = "{The Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: measurement of the BAO and growth rate of structure of the luminous red galaxy sample from the anisotropic power spectrum between redshifts 0.6 and 1.0}",
+      journal = {\mnras},
+     keywords = {cosmological parameters, large-scale structure of the Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = oct,
+       volume = {498},
+       number = {2},
+        pages = {2492-2531},
+          doi = {10.1093/mnras/staa2455},
+archivePrefix = {arXiv},
+       eprint = {2007.08994},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.498.2492G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{bautista2021MNRAS.500..736B,
+       author = {{Bautista}, Julian E. and {Paviot}, Romain and {Vargas Maga{\~n}a}, Mariana and {de la Torre}, Sylvain and {Fromenteau}, Sebastien and {Gil-Mar{\'\i}n}, Hector and {Ross}, Ashley J. and {Burtin}, Etienne and {Dawson}, Kyle S. and {Hou}, Jiamin and {Kneib}, Jean-Paul and {de Mattia}, Arnaud and {Percival}, Will J. and {Rossi}, Graziano and {Tojeiro}, Rita and {Zhao}, Cheng and {Zhao}, Gong-Bo and {Alam}, Shadab and {Brownstein}, Joel and {Chapman}, Michael J. and {Choi}, Peter D. and {Chuang}, Chia-Hsun and {Escoffier}, St{\'e}phanie and {de la Macorra}, Axel and {du Mas des Bourboux}, H{\'e}lion and {Mohammad}, Faizan G. and {Moon}, Jeongin and {M{\"u}ller}, Eva-Maria and {Nadathur}, Seshadri and {Newman}, Jeffrey A. and {Schneider}, Donald and {Seo}, Hee-Jong and {Wang}, Yuting},
+        title = "{The completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: measurement of the BAO and growth rate of structure of the luminous red galaxy sample from the anisotropic correlation function between redshifts 0.6 and 1}",
+      journal = {\mnras},
+     keywords = {cosmology: dark energy, cosmology: large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2021,
+        month = jan,
+       volume = {500},
+       number = {1},
+        pages = {736-762},
+          doi = {10.1093/mnras/staa2800},
+archivePrefix = {arXiv},
+       eprint = {2007.08993},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.500..736B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{ross2020MNRAS.498.2354R,
+       author = {{Ross}, Ashley J. and {Bautista}, Julian and {Tojeiro}, Rita and {Alam}, Shadab and {Bailey}, Stephen and {Burtin}, Etienne and {Comparat}, Johan and {Dawson}, Kyle S. and {de Mattia}, Arnaud and {du Mas des Bourboux}, H{\'e}lion and {Gil-Mar{\'\i}n}, H{\'e}ctor and {Hou}, Jiamin and {Kong}, Hui and {Lyke}, Brad W. and {Mohammad}, Faizan G. and {Moustakas}, John and {Mueller}, Eva-Maria and {Myers}, Adam D. and {Percival}, Will J. and {Raichoor}, Anand and {Rezaie}, Mehdi and {Seo}, Hee-Jong and {Smith}, Alex and {Tinker}, Jeremy L. and {Zarrouk}, Pauline and {Zhao}, Cheng and {Zhao}, Gong-Bo and {Bizyaev}, Dmitry and {Brinkmann}, Jonathan and {Brownstein}, Joel R. and {Rosell}, Aurelio Carnero and {Chabanier}, Sol{\`e}ne and {Choi}, Peter D. and {Chuang}, Chia-Hsun and {Cruz-Gonzalez}, Irene and {de la Macorra}, Axel and {de la Torre}, Sylvain and {Escoffier}, Stephanie and {Fromenteau}, Sebastien and {Higley}, Alexandra and {Jullo}, Eric and {Kneib}, Jean-Paul and {McLane}, Jacob N. and {Mu{\~n}oz-Guti{\'e}rrez}, Andrea and {Neveux}, Richard and {Newman}, Jeffrey A. and {Nitschelm}, Christian and {Palanque-Delabrouille}, Nathalie and {Paviot}, Romain and {Pullen}, Anthony R. and {Rossi}, Graziano and {Ruhlmann-Kleider}, Vanina and {Schneider}, Donald P. and {Maga{\~n}a}, Mariana Vargas and {Vivek}, M. and {Zhang}, Yucheng},
+        title = "{The Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: Large-scale structure catalogues for cosmological analysis}",
+      journal = {\mnras},
+     keywords = {catalogues, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = oct,
+       volume = {498},
+       number = {2},
+        pages = {2354-2371},
+          doi = {10.1093/mnras/staa2416},
+archivePrefix = {arXiv},
+       eprint = {2007.09000},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.498.2354R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{2021MNRAS.503.5061W,
        author = {{Weaverdyck}, Noah and {Huterer}, Dragan},
         title = "{Mitigating contamination in LSS surveys: a comparison of methods}",
