--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,23 +1,24 @@
 \section{Introduction}
 \label{sec:introduction}
-Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained to great degrees by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation}, at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The paradigm of inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the Universe as well as the absence of magnetic monopole \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe went through an unknown reheating process, and primordial fluctuations generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though the reality of an inflationary era is almost certain from observations, characteristics of the field causing the inflationary expansion and its underlying mechanism are vastly unknown, and statistical properties of primordial fluctuations remain an interesting question in modern observational cosmology. Early analyses of cosmological datasets have suggested that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$, and it is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
+Characteristics of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained to remarkable extents by a cosmological model for the Universe that consists of dark energy, dark matter, and ordinary luminous matter, and has experienced a period of rapid expansion, known as \textit{inflation}, in its early stages \citep[see, e.g.,][]{weinberg2013observational}. The paradigm of inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the Universe as well as the absence of magnetic monopole \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe went through a reheating process, and primordial fluctuations were generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though current observations imply that inflation has certainly happened, characteristics of the field or the fields driving the inflationary expansion remain vastly unknown, and statistical properties of primordial fluctuations pose an intriguing problem in modern observational cosmology. Early studies of cosmological observables have suggested that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$, and it is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
 \begin{equation}
  \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>].
 \end{equation}
-Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably higher $\fnl$ values than unity \citep[see, e.g.,][]{de2017next}. Therefore, deriving robust constraints on $\fnl$ are the first stepping stone toward better understanding the dynamic of the early Universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as consequently, it induces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
+Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably higher than unity $\fnl$ values \citep[see, e.g.,][]{de2017next}. Therefore, getting robust constraints on $\fnl$ is the first stepping stone toward better understanding the dynamics of the early Universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a scale-dependent shift in galaxy bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
 \begin{equation}\label{eq:db}
 \Delta b \sim \fnl \frac{(b - p)}{k^{2}},
 \end{equation}
-where $p$ determines the response of the tracer to the halo gravitational field. If only mass determines how galaxies occupy a halo, $p=1$, which is often referred to as the universality of halo occupation function. However, numerical simulations indicate that halo occupation distribution for different tracers, which are results of recent mergers, could depend on other properties besides mass, and thus $p=1.6$ \citep{slosar2008constraints}. Because of the dependence of $\Delta b$ on $k^{-2}$, the signature of local primordial non-Gaussianity is more pronounced on small wavenumbers (or large scales) in the two-point clustering of galaxies and quasars. 
+where $p$ determines the response of galaxies to the halo gravitational field. If only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values, e.g., $p=1.6$ \citep{slosar2008constraints}. Because of the dependence of $\Delta b$ on $k^{-2}$, the signature of local primordial non-Gaussianity is more visible on small wavenumbers (or large scales) in the two-point clustering statistics. 
 
-The current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since CMB observation is limited by cosmic variance, it alone cannot enhance our understanding of $\fnl$ further enough to break the degeneracy amongst various inflationary models \citep[see, e.g.,][]{ade2019simons}. Nevertheless, combining CMB with LSS data could cancel cosmic variance, partially even if not completely, and improve these limits to a precision level required to differentiate between alternative inflationary scenarios \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is also hindered by the late-time nonlinear effects raised due to structure growth \citep{baldauf2011galaxy, baldauf2011primordial}, which is non-trivial to account for, and this limitation establishes the scale-dependent bias technique as the smoking gun for constraining local PNG with LSS. Although still not competitive with the current bounds from CMB and LSS, UV Luminosity Function is shown as a new approach for constraining $\fnl$ by probing galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with CMB and LSS clustering. With this technique, \cite{sabti2021JCAP} uses the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$, and predicts upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope to yield up to four times improvements.
+The current tightest bound on $\fnl$ comes from the three-point clustering measurement of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since CMB is limited by cosmic variance, its data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. Combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these results to a precision level needed to differentiate between alternative inflationary scenarios \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is likewise hindered by the late-time nonlinear effects raised from structure growth, which is non-trivial to account for \citep{baldauf2011galaxy, baldauf2011primordial}. UV Luminosity Function is a novel approach for constraining $\fnl$ by probing galaxy abundances and structure formationon small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
+\fnl$ constraints from UV Luminosity Function. Given these limitations, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. 
 
-Measuring $\fnl$ with the scale-dependent bias effect is nonetheless exceptionally challenging due to various systematic effects which prompt excess clustering signal on large scales sensitive to $\fnl$. These systematics are broadly classified into theoretical and observational. Survey geometry is a major source of systematic error, which entangles clustering power on different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate scale-dependent signatures on large scales, identical to PNG, which hinder measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate power spectrum of galaxies \citep{castorina2020JCAP}. Integral constraint is another source for systematic error, which pushes clustering power on modes near survey size to zero \citep{peacock1991large,de2019integral}. It is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. Neglecting any of these effects in modeling power spectrum leads to biased $\fnl$ constraints \citep[see, e.g.,][]{riquelme2022primordial}. 
+Measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on scales where there is a high sensitivity to $\fnl$. These systematics are broadly classified into theoretical and observational. For instance, survey geometry entangles clustering power on different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate scale-dependent signatures on large scales, identical to local PNG, which hinder measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these effects in modeling power spectrum is crucial to derive unbiased $\fnl$ constraints \citep[see, e.g.,][]{riquelme2022primordial}. 
 
-On the other hand, observational systematics are driven predominantly by either varying imaging properties across the sky \citep{ross2011} or calibration issues that cause spurious fluctuations in the target density field \citep{huterer2013calibration}. This type of systematic error is much more challenging to model and mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect in the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of Sloan Digital Sky Survey DR6 does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to relax the selection criteria cuts to accommodate fainter targets \citep[see, e.g,][]{kitanidis2020imaging}. 
+On the other hand, observational systematics are driven primarily by varying imaging properties across the sky \citep{ross2011} and photometric calibration issues that manifest as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to model and mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect in the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the contribution of stellar density and astronomical seeing is too high for a robust $\fnl$ measurement using the quasar sample from the Sloan Digital Sky Survey DR6. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
 
-The Dark Energy Spectroscopic Instrument (DESI) uses robots to collect $5000$ spectra in parallel, and is designed to deliver unparalleled volume of spectroscopic data that will enable analyses to deepen our understanding of the energy contents of the Universe, specifically, the equation of state for Dark Energy \citep{aghamousa2016desi}. Assuming imaging systematics are under control and with the volume probed, DESI along with other upcoming surveys, such as Rubin Observatory and SphereX, are expected to yield unprecedented constraints on $\fnl$ \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. DESI preselects its targets from its dedicated imaging surveys, known as the DESI Legacy Imaging Surveys, which are collected from observation conduced between 2014 and 2019 from three ground-based telescopes based in Chile and the US. The characterization of potential sources for systematic error in DESI imaging data is of paramount importance to DESI success, since these effects from imaging catalogs could potentially be inherited into spectroscopic catalogs and thus negatively influence the science goals with DESI data. DESI targets galaxies and quasars to construct a 3D map of LSS up to redshifts around 4. 
+The Dark Energy Spectroscopic Instrument (DESI) uses robotically-driven fibers to collect $5000$ spectra simultaneously and is designed to deliver an unparalleled volume of spectroscopic data that will enable future analyses to deepen our understanding of the energy contents of the Universe, specifically, the equation of state for Dark Energy \citep{aghamousa2016desi}. Even though the primary focus of DESI is dark energy, assuming imaging systematics are under control, DESI along with other upcoming surveys, such as Rubin Observatory and SphereX, are expected to yield unprecedented constraints on $\fnl$ as well \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. DESI survey targets galaxies and quasars to construct a 3D map of LSS up to redshifts around 4. DESI preselects its targets from its dedicated imaging surveys, known as the DESI Legacy Imaging Surveys, which are collected from ground-based observations conducted between 2014 and 2019 from three telescopes in Chile and the US. The characterization of potential sources for systematic error in DESI imaging data is of paramount importance to DESI success since spectroscopic catalogs could inherit these issues from imaging catalogs, and thus negatively impact DESI science goals. 
 
-The effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these tracers is crucial for the science beyond dark energy, such as constraining $\fnl$ and other features in the primordial power spectrum \citep{beutler2019primordial}. Some of the current methods seek to mitigate systematic effects by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density field (template-based regression), ultimately to regress out the modes affected by imaging properties from the target density. Another class of methods aim to cross correlate different tracers to improve constraints by canceling cosmic variance and by reducing the effect of systematic error, as each tracer might respond differently to a source of systematics. \cite{giannantonio2014improved} presents improved $\fnl$ constraints using the integrated Sachs-Wolfe effect. These methods have their limitations and strengths \citep[see, e.g.,][for a review]{2021MNRAS.503.5061W}. For instance, mode deprojection yields an unbiased clustering but can be employed for angular clustering only, and its involved matrix algebra could turn out to be time-consuming for large survey sizes. Template-based regression is on the other hand computationally economic, but it returns biased clustering by removing some of clustering power, depending on the number of input templates and the flexibility of regression model. Specifically related to the template-based regression method, there is a little effort to calibrate and characterize the amount of clustering power removed during the cleaning process. For studies like BAO and RSD, these effects are demonstrated to be negligible \citep{merz2021clustering}; however, these effects introduce significant biases in $\fnl$ constraints \citep{mueller2022primordial} as they highly impact galaxy clustering on large scales \citep{rezaie2021primordial}.  
+The effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these tracers is crucial for the science beyond dark energy, such as constraining $\fnl$ and other features in the primordial power spectrum \citep{beutler2019primordial}. Some of the current methods seek to mitigate systematic effects by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density (template-based regression), ultimately to regress out the modes affected by imaging properties from target density. Another class of methods aims to cross-correlate different tracers of dark matter to enhance inferences by canceling cosmic variance and by reducing the effect of systematic error, as each tracer might respond differently to a source of systematic error. \cite{giannantonio2014improved} presents improved $\fnl$ constraints using the integrated Sachs-Wolfe effect. These methods have their limitations and strengths \citep[see, e.g.,][for a review]{2021MNRAS.503.5061W}. For instance, mode deprojection yields an unbiased clustering but can be employed for angular clustering only, and its involved matrix algebra could prove time-consuming for large survey sizes. Template-based regression is on the other hand computationally economic, but it returns biased clustering by removing some of clustering power, depending on the number of input templates and the flexibility of the regression model. Specifically related to the template-based regression method, there is little effort to calibrate and characterize the amount of clustering power removed during the cleaning process. For studies like BAO and RSD, these effects are demonstrated to be negligible \citep{merz2021clustering}; however, these effects introduce significant biases in $\fnl$ constraints \citep{mueller2022primordial} as they highly impact galaxy clustering on large scales \citep{rezaie2021primordial}.  
  
-This paper presents robust constraints on $\fnl$ from DESI imaging with an exquisite characterization of imaging systematic error and mitigation biases. We measure the significance of residual systematic error in data using angular cross power spectrum (between galaxy density and imaging properties) and galaxy mean density contrast statistics. In this paper, the robustness of our results is validated against various sources of systematic error, including but not limited to photometric calibration and Milky Way extinction. For modeling angular power spectrum, we determine the redshift distribution of tracers by utilizing early spectroscopic data from the DESI Survey Validation. We cross-correlate the density field of galaxies with the templates of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance of remaining systematic error. To quantify the sensitivity of $\fnl$ signal to alternative cleaning methods, we apply various linear and nonlinear approaches with different combinations of imaging templates. This paper is structured as follows. Section \ref{sec:data} describes the DESI imaging galaxy sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
+This paper presents robust constraints on $\fnl$ from DESI imaging data with exquisite treatment of imaging systematic error and mitigation biases. We measure the significance of residual systematic error in our data using angular cross-power spectrum (between galaxy density and imaging properties) and mean density contrast of galaxies. Specifically, the robustness of our results is validated against various sources of systematic error, including but not limited to photometric calibration and Milky Way extinction. We cross-correlate the density map of galaxies with the template maps of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance of remaining systematic error. Various linear and nonlinear data cleaning approaches are applied with different combinations of imaging templates to quantify the sensitivity of $\fnl$ constraints to alternative cleaning methods. The redshift distribution of tracers is determined from early spectroscopic data of the DESI Survey Validation for modeling angular power spectrum. This paper is structured as follows. Section \ref{sec:data} describes the DESI imaging galaxy sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theoretical framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
