--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -100,7 +100,7 @@ We use the diagnostic tests first applied to SDSS data in \cite{rezaie2021primor
 \begin{figure*}
 \centering
 \includegraphics[width=0.75\textwidth]{clx_mocks.pdf}
-\caption{Cross power spectrum between the DR9 LRGs and imaging maps. Dark and light shades represent the $97.5$ percentile of 1000 lognormal mocks without and with PNG, respectively.}\label{fig:clxmock}
+\caption{Cross power spectra between the DR9 LRG sample and imaging maps. Dark and light shades represent the $97.5$ percentile of 1000 lognormal mocks without and with PNG, respectively.}\label{fig:clxmock}
 \end{figure*}
 
 \begin{figure*}
@@ -114,13 +114,13 @@ We use the diagnostic tests first applied to SDSS data in \cite{rezaie2021primor
 \centering
 \includegraphics[width=0.45\textwidth]{chi2test.pdf}
 \includegraphics[width=0.45\textwidth]{chi2test2.pdf}
-\caption{Top: Cross power spectrum $\chi^{2}$ diagnostic. Bottom: Mean density contrast diagnostic. The values observed in DR9 before and after linear and nonlinear treatments are quoted and the histograms are constructed from 1000 realizations of clean mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
+\caption{Remaining systematic error $\chi^{2}. $Top: Cross power spectrum. Bottom: Mean density contrast. The values observed in the DR9 sample before and after linear and nonlinear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{chi2lmax.pdf}
-\caption{Cross Spectrum $\chi^{2}$ for DR9 LRG density and imaging maps with linear and nonlinear cleaning (both with conservative II maps) as a function of the highest mode $\ell_{\rm max}$ while the lowest mode is fixed at $\ell_{\rm min}=2$. Solid curve and shade represent the median estimate and $68\%$ confidence constructed from $\fnl=0$ mocks.}\label{fig:chi2cellextend}
+\caption{Cross Spectrum $\chi^{2}$ for DR9 LRG density and imaging maps with linear and nonlinear cleaning (both with conservative II maps) as a function of the highest mode $\ell_{\rm max}$ while the lowest mode is fixed at $\ell_{\rm min}=2$. Solid curve and dark (light) shade represent the median estimate and $68\%$ ($95\%$) confidence constructed from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
 \end{figure}
 
 
